--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body{
     background: rgb(170, 51, 51);
     color: white;
 }
+
+p{
+    background: whitesmoke;
+    height: 30px;
+    width: 150px;
+}
