--- a/style.css
+++ b/style.css
@@ -3,8 +3,20 @@ body{
     color: white;
 }
 
-p{
+#parrafo1{
     background: whitesmoke;
+    height: 30px;
+    width: 150px;
+}
+
+#parrafo2{
+    background: green;
+    height: 30px;
+    width: 150px;
+}
+
+#parrafo3{
+    background: yellow;
     height: 30px;
     width: 150px;
 }
